# GlyphWeave

./: .gitignore  404.html  AGENTS.md  README.ja.md  README.md  README.zh.md  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
.github/workflows/: bevy-client-build.yml  deploy.yml
api/: index.html
assets/: index-Cz0N55iC.js  index-D3UHUVlk.css
bevy/: API_NOTES.md  Cargo.toml
bevy/assets/fonts/: generate_atlas.py
bevy/crates/app/: Cargo.toml
bevy/crates/app/src/: camera.rs  gameplay.rs  gameplay_demo.rs  input.rs  main.rs  perf.rs  render_sync.rs  resource.rs  scenario.rs  tool.rs  ui.rs  viewport.rs
bevy/crates/app/src/render/: atlas.rs  mod.rs  tilemap.rs
bevy/crates/cli/src/: main.rs
bevy/crates/core/: Cargo.toml
bevy/crates/core/src/: coords.rs  edit.rs  lib.rs  tile.rs  world.rs
bevy/crates/core/src/gameplay/: command.rs  mod.rs  sim.rs  state.rs
docs/: game-plan.md  game-todo.md
examples/: badlands-wadi.gemap
godot/: project.godot
godot/.godot/: global_script_class_cache.cfg
godot/resources/: demo_map.gd  demo_map.gd.uid  tile_types.gd  tile_types.gd.uid
godot/scenes/: editor_page.tscn  home_page.tscn  main.tscn
godot/scripts/: canvas_controller.gd  canvas_controller.gd.uid  editor_page.gd  editor_page.gd.uid  export_panel.gd  export_panel.gd.uid  home_page.gd  home_page.gd.uid  layers_panel.gd  layers_panel.gd.uid  main.gd  main.gd.uid  minimap.gd  minimap.gd.uid  png_export.gd  png_export.gd.uid  toolbar.gd  (+7 more)
scripts/: check-bevy-fps.sh
server/: api-doc.mjs  index.mjs  map-shared.mjs
src/: worker.ts
(+52 files in other folders)
