[workspace]
resolver = "3"
members = ["crates/core", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/HsiangNianian/GlyphWeave"

[workspace.dependencies]
bevy = "0.18.1"
bevy_ecs_tilemap = { version = "0.18", features = ["atlas"] }
bevy_egui = "0.39.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
glyphweave-core = { path = "crates/core" }
