[package]
name = "glyphweave-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "glyphweave"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_egui = { workspace = true }
glyphweave-core = { workspace = true }
serde_json = { workspace = true }
